# faucetconfrpc

./: Dockerfile.server  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yaml  pypi.yaml  test.yml
