[tool.poetry]
name = "faucetconfrpc-ng"
version = "1.0.1"
description = "utility to manage FAUCET config files via RPC (anarkiwi fork)"
authors = ["Charlie Lewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [{include = "faucetconfrpc", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
c65faucet = "1.0.102"
grpcio = "1.81.1"
grpcio-tools = "1.81.1"
protobuf = "6.33.6"
prometheus_client = "0.25.0"
pybind11 = "3.0.4"
# dnspython 2.3.0 is not compatible with eventlet
# https://github.com/eventlet/eventlet/issues/781
os-ken = ">=3.0.1"
dnspython = "<2.8.1"
pyopenssl = ">22.1.0"
cryptography = "48.0.1"

[tool.poetry.dev-dependencies]
attrs = "26.1.0"
pylint = "4.0.5"
pytype = "2024.10.11"
pytest = "9.1.0"

[tool.poetry.scripts]
faucetconfrpc_server = "faucetconfrpc.faucetconfrpc_server:serve"
faucetconfrpc_client = "faucetconfrpc.faucetconfrpc_client:main"

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/faucetconfrpc"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
